test/samples/linear/valid/func-return-linear-cast.crust

linear int make() {
    return 5;

}

linear int main() {
    linear int a; 
    
    a = make();

    return a;
} 
