test/samples/linear/invalid/consumed-twice.crust

int main() {
    linear int a; 

    a = 1;
    a;
    a;

    return 0;
} 
